* jargon-data-utils - additional functionality for dealing with iRODS data, such as building trees, storing information in iRODS on behalf of applications, and doing diffs between local and iRODS
* jargon-security - code for use with Spring security
* jargon-user-tagging - code for using free tagging and other metadata metaphors on top of iRODS
* jargon-transfer - transfer manager for managing and synchronizing data with iRODS
* jargon-ticket - support for ticket processing
* jargon-httpstream - stream http content into iRODS via Jargon


==Requirements==

*Jargon depends on Java 1.6+
*Jargon is built using Apache Maven2, see POM for dependencies
*Jargon supports iRODS 2.5 through iRODS 3.2

==Libraries==

Jargon-core uses Maven for dependency management.  See the pom.xml file for references to various dependencies.

Note that the following bug and feature requests are logged in GForge with related commit information [[https://code.renci.org/gf/project/jargon/tracker/]]

==Bug Fixes==
 
 *[#1263] ACL retrieval query and the user lookup queries, the method queries the zone of the user and not the zone containing the collection
 **Added code to properly query the permissions as they exist on the current zone
 
 *[#1139] Spaces at the begin or end of a data object name will cause an exception
 **removed trim() statements in query building to handle intended spaces in file names.  Note that there may be a bug for collection names with
 embedded spaces, this is ignored in the JUNit tests for CollectionAOImpl, and that issue has been routed to iRODS for now.
 
==Features==

*[#1264] [iROD-Chat:9666] Referencing Data Objects
**Added findById() methods to DataObjectAO and CollectionAO

*[#1172] Jargon enhancements supporting HIVE integration project
**Added new methods to CollectionAO for paging queries by AVU using offsets
**Added row counts and other stats to MetaDataAndDomainData lists for find metadata by metadata query methods