@@ -1143,16 +1143,18 @@ public final class IRODSFileSystemAOImpl extends IRODSGenericAO implements
 
 		log.debug("setting resource to account default:{}", defaultResource);
 
-		log.debug("checking if parent exists");
-		IRODSFile target = this.getIRODSFileFactory().instanceIRODSFile(
-				absolutePath);
-		IRODSFile parent = (IRODSFile) target.getParentFile();
+		//IRODSFile target = this.getIRODSFileFactory().instanceIRODSFile(
+		//		absolutePath);
+		
+		/*
+		 * IRODSFile parent = (IRODSFile) target.getParentFile();
 		if (!parent.exists()) {
 			log.warn(
 					"creating an output stream for parent:{} that does not exist, making parent dirs..",
 					parent.getAbsolutePath());
 			parent.mkdirs();
 		}
+		*/
 
 		int fileId = 0;
 
@@ -1239,9 +1241,8 @@ public final class IRODSFileSystemAOImpl extends IRODSGenericAO implements
 					"resource is null, set to blank to automatically have the irods system select the default storage resource by rule");
 		}
 
-		String trimmedPath = absolutePath.trim();
 		String thisResource = null;
-		if (!MiscIRODSUtils.isFileInThisZone(trimmedPath, getIRODSAccount())) {
+		if (!MiscIRODSUtils.isFileInThisZone(absolutePath, getIRODSAccount())) {
 			thisResource = "";
 		} else {
 			thisResource = resource;
@@ -1252,7 +1253,7 @@ public final class IRODSFileSystemAOImpl extends IRODSGenericAO implements
 
 		int responseFileNbr = 0;
 
-		DataObjInp dataObjInp = DataObjInp.instance(trimmedPath, createMode,
+		DataObjInp dataObjInp = DataObjInp.instance(absolutePath, createMode,
 				openFlags, offset, dataSize, thisResource, null);
 		Tag response = getIRODSProtocol().irodsFunction(DataObjInp.PI_TAG,
 				dataObjInp.getParsedTags(), DataObjInp.CREATE_FILE_API_NBR);
