@@ -48,7 +48,7 @@ jargon.reconnect=false
 # if jargon.reconnect is true, this is the time in milliseconds before restarting, default is 10 minutes
 jargon.reconnect.time.in.millis=600000
 # turns on detailed instrumentation code which will be reported in the perf4j log as defined in log4j.xml. Production of this data will be implemented over time
-jargon.instrument=true
+jargon.instrument=false
 
 #------------------
 #max query results tuning 
