@@ -44,6 +44,10 @@ Note that the following bug and feature requests are logged in GForge with relat
  **removed trim() statements in query building to handle intended spaces in file names.  Note that there may be a bug for collection names with
  embedded spaces, this is ignored in the JUNit tests for CollectionAOImpl, and that issue has been routed to iRODS for now.
  
+ *[#1243] issues with griffen with jargon 3.2.1.4
+ **Remove over-headed create/close/open sequence for IRODSOutputStream creation
+ **Reduce calls for objStat, no longer get an objStat on a parent directory, no longer creates parent dir if missing
+ 
 ==Features==
 
 *[#1264] [iROD-Chat:9666] Referencing Data Objects
